--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,4 +49,6 @@
   "files.associations": {
     ".cursorrules": "markdown"
   },
+  "jestrunner.codeLensSelector": "**/*.{test,spec,integration-spec}.{js,jsx,ts,tsx}"
+  }
 }
