--- a/packages/twenty-docker/docker-compose.yml
+++ b/packages/twenty-docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 name: twenty
 
 services:
@@ -14,7 +13,7 @@ services:
       && chown -R 1000:1000 /tmp/docker-data"
 
   server:
-    image: twentycrm/twenty:${TAG}
+    image: twentycrm/twenty:${TAG:-latest}
     volumes:
       - server-local-data:/app/packages/twenty-server/${STORAGE_LOCAL_PATH:-.local-storage}
       - docker-data:/app/docker-data
@@ -45,7 +44,7 @@ services:
     restart: always
 
   worker:
-    image: twentycrm/twenty:${TAG}
+    image: twentycrm/twenty:${TAG:-latest}
     command: ["yarn", "worker:prod"]
     environment:
       PG_DATABASE_URL: postgres://${PGUSER_SUPERUSER:-postgres}:${PGPASSWORD_SUPERUSER:-postgres}@${PG_DATABASE_HOST:-db:5432}/default
@@ -67,7 +66,7 @@ services:
     restart: always
 
   db:
-    image: twentycrm/twenty-postgres-spilo:${TAG}
+    image: twentycrm/twenty-postgres-spilo:${TAG:-latest}
     volumes:
       - db-data:/home/postgres/pgdata
     environment:
