[CI] Migrate to ubuntu 24.04 runners (#9607)
## Introduction
Our GitHub Runners provider just
[released](https://depot.dev/changelog/2024-07-12-ubuntu-24-04-github-actions-runner-beta)
ubuntu-24.04 runners lately

## Cache primary key factorization
Refactored the calculation of the cache-primary-key prefix to avoid
duplication

## Runs
- twenty-front lint
https://github.com/twentyhq/twenty/actions/runs/12770312293/job/35595272862
- twenty-server
https://github.com/twentyhq/twenty/actions/runs/12770218595

--- a/.github/workflows/actions/restore-cache/action.yml
+++ b/.github/workflows/actions/restore-cache/action.yml
@@ -16,12 +16,17 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Cache primary key builder
+      id: cache-primary-key-builder
+      shell: bash
+      run: |
+        echo "CACHE_PRIMARY_KEY_PREFIX=${{ inputs.key }}-${{ github.ref_name }}" >> "${GITHUB_OUTPUT}"
     - name: Restore cache
       uses: actions/cache/restore@v4
       id: restore-cache
       with:
-        key: ${{ inputs.key }}-${{ github.ref_name }}-${{ github.sha }}
-        restore-keys: ${{ inputs.key }}-${{ github.ref_name }}-
+        key:  ${{ steps.cache-primary-key-builder.outputs.CACHE_PRIMARY_KEY_PREFIX }}-${{ github.sha }}
+        restore-keys: ${{ steps.cache-primary-key-builder.outputs.CACHE_PRIMARY_KEY_PREFIX }}-
         path: |
           .cache
           .nx/cache
